# AiPen

./: .env.example  .gitignore  Claude.md  Editor-old.vue  LICENSE  README.md  USER_GUIDE.md  cargo_check.txt  index.html  key.pem.pub  latest.json  package-lock.json  package.json  reasonix.toml  tsc_result.txt  user-exported.docx
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
docs/: CHANGELOG.md  editor-roadmap1.md  editor-spec.md  global-search-design.md  导出规则.md
inspect-docx/docProps/: core.xml
inspect-docx/word/: document.xml  footer1.xml  settings.xml  styles.xml
knowledge/: 01-企业概况.docx  02-发展历程.docx  03-经营管理.docx  04-科技进步.docx  05-市场开发.docx  06-党的建设.docx  07-企业英模.docx  08-企业故事.docx  09-文化基地.docx  10-社会责任.docx  11-文艺体育.docx  12-亲切关怀.docx  13-媒体宣传.docx
md/: offline-license-design.md  outline-builder.md  outline-evaluator.md  xi-quotes-research-SKILL (1).md  中国石油公文写作_Skill_Interview问答采集.md  节奏韵律.md  领导用语评价Skill.md
src/: App.css  App.tsx  App.vue  main.ts
src-tauri/: .last_project  Cargo.toml  build_err.txt  check_output.txt  tauri.conf.json
src-tauri/capabilities/: browser.json  default.json
src-tauri/icons/: icon.icns
src-tauri/projects/: doc_mqs5xuxr.md
src-tauri/src/: ai.rs  commands.rs  db.rs  diff.rs  lib.rs  main.rs  version.rs
src/components/: AIPanel.vue  ApiSettings.vue  ChatPanel.vue  ComposeLauncher.vue  ComposeWorkbench.vue  ConfirmDialog.vue  DiffViewer.vue  Editor.vue  ExportSettings.vue  KnowledgePanel.vue  MaterialClipDialog.vue  MaterialPanel.vue  RichEditor.vue  SkillPanel.vue  VersionList.vue
src/composables/: useConfirm.ts
src/data/: recipes.ts
src/stores/: document.ts  exportSettings.ts  materialStore.ts  theme.ts
(+19 files in other folders)
